tests/e2e/testdata/compiled-cases/input-validation/stacks/valid/nulls.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web-null'
      optional-note: null
      optional-size: null
      spec: { host: 'api', port: null }
    }
  }
}
