tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/integer-number.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      scalar-size: 5.0
    }
  }
}
